cabal-version:      3.0
name:               karfa
version:            0.0.1.0
homepage:           https://github.com/Kleidukos/karfa/#readme
bug-reports:        https://github.com/Kleidukos/karfa/issues
author:             Hécate Moonlight
maintainer:         Hécate Moonlight
license:            BSD-3-Clause
build-type:         Simple
tested-with:        GHC==9.0
extra-source-files:
  CHANGELOG.md
  LICENSE.md
  README.md

source-repository head
  type:     git
  location: https://github.com/Kleidukos/karfa

common common-extensions
  default-extensions:
    NoMonomorphismRestriction
    NoStarIsType
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedLabels
    OverloadedStrings
    PolyKinds
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns

  default-language:  Haskell2010

common common-ghc-options
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -fhide-source-paths -Wno-unused-do-bind -fshow-hole-constraints
    -flate-specialise -funbox-strict-fields

common common-rts-options
  ghc-options: -threaded "-with-rtsopts=-N -T"

library karfa-library
  import:          common-extensions
  import:          common-ghc-options

  -- pkgconfig-depends: libpq -any
  hs-source-dirs:  src
  exposed-modules:

  build-depends:
      ghc ^>=9.0
    , base                       ^>=4.14

executable karfa
  import:         common-extensions
  import:         common-ghc-options
  import:         common-rts-options
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:
    , base
    , karfa-library

test-suite karfa-test
  import:         common-extensions
  import:         common-ghc-options
  import:         common-rts-options
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test
  build-depends:
    , base
    , karfa-library

  other-modules:
